# mcraw-speedtranscode

./: .gitignore  .vsconfig  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  THIRD_PARTY.md  vcpkg.json
cmake/: FindFFmpeg.cmake  embed-spirv.cmake
cmake/vcpkg-ports/ffmpeg/: portfile.cmake  prores-vulkan-async-depth.patch  vcpkg.json
config/: compare-amaze.json  compare-capture-sharpening.json  compare-dcb.json  compare-lmmse.json  compare-raw-chroma-denoise.json  default.json  gpu-stage0-corpus.json  schema-v1.json  vulkan-balanced.json  vulkan-fast.json  vulkan-gpu-pipeline.json  vulkan-precise.json  vulkan-stage0-baseline.json  vulkan-upload-bridge.json
docs/: FFMPEG_VULKAN_BUILD.md  GPU_BATCH_D1A_OUTPUT_VALIDATION.md  GPU_BATCH_D1B_ASYNC_DEPTH.md  GPU_BATCH_D1CD_GO_NO_GO.md  GPU_BATCH_EA_OFFICIAL_DECODER.md  GPU_BATCH_EB_PERSISTENT_WORKERS.md  GPU_BATCH_EC_DECODER_CAPACITY.md  GPU_BATCH_E_STATUS.md  GPU_BATCH_F_COLOR_METADATA.md  GPU_BATCH_F_COMPATIBILITY.md  GPU_BATCH_F_HARDWARE_MATRIX.md  GPU_BATCH_F_RELEASE_GATE_STATUS.md  GPU_BATCH_F_STABILITY.md  GPU_BATCH_F_VALIDATION_RACE_WAIVER.md  GPU_PHASE1_VALIDATION.md  GPU_PHASE2_VALIDATION.md  GPU_PHASE3_VALIDATION.md  GPU_PHASE4_VALIDATION.md  GPU_PHASE5_VALIDATION.md  GPU_PHASE6_VALIDATION.md  GPU_PHASE7_OPTIMIZATION.md  GPU_PHASE8_PRODUCTION.md  GPU_PIPELINE_AUDIT.md  GPU_PIPELINE_FORMAL_ACTION_GUIDE.md  GPU_PIPELINE_SERIALIZATION_ANALYSIS_2026-07-15.md  GPU_PIPELINE_SUMMARY_AND_NEXT_STEPS.md  GPU_STAGE0_BASELINE.md  GPU_STAGE1B_COLOR_VALIDATION.md  GPU_STAGE1C_SHARPENING_VALIDATION.md  GPU_STAGE1D_DAVINCI_INTERMEDIATE_VALIDATION.md  GPU_STAGE1E_RESIDENT_CHAIN_VALIDATION.md  GPU_STAGE1F_E2E_BENCHMARK.md  GPU_STAGE1G_PERFORMANCE_RECOVERY.md  GPU_STAGE1_CAMERA_RGB_TECHNICAL_DESIGN.md  GPU_STAGE2B_CALIBRATION_VALIDATION.md  GPU_STAGE2C_RCD_VALIDATION.md  GPU_STAGE2D_RESIDENT_CHAIN_VALIDATION.md  GPU_STAGE2E_E2E_BENCHMARK.md  GPU_STAGE2_U16_RAW_TECHNICAL_DESIGN.md  GPU_STAGE3B_FP16_STORAGE_VALIDATION.md  (+15 more)
docs/adr/: README.md
include/mcraw/core/: audio_timing.hpp  config.hpp  error.hpp  execution_plan.hpp  metadata.hpp  pixel_types.hpp  timing.hpp  worker_pool.hpp
include/mcraw/io/: mcraw_reader.hpp
include/mcraw/output/: backend_selection.hpp  cpu_prores_encoder.hpp  ffmpeg_raii.hpp  ffmpeg_vulkan_context.hpp  ffmpeg_writer.hpp  sidecar.hpp  video_encoder.hpp  video_frame.hpp  vulkan_prores_encoder.hpp  vulkan_prores_encoder_stub.hpp
include/mcraw/processing/: calibration.hpp  color.hpp  demosaic.hpp  log_curve.hpp  pipeline.hpp  raw_chroma_denoise.hpp  yuv.hpp
include/mcraw/vulkan/: vulkan_camera_pipeline_resources.hpp  vulkan_raw_pipeline_resources.hpp  vulkan_rgb_to_yuv.hpp  vulkan_runtime.hpp
scripts/: benchmark-gpu-stage0.ps1  benchmark-win-x64.ps1  bootstrap-vcpkg.ps1  build.ps1  capture-gpu-stage0-baseline.ps1  check-vulkan-capability.ps1  compare-gpu-stage1.ps1  run-batch-f-stability.ps1  validate-release-candidate.ps1  validate-resolve-import.py  validate-samples.ps1
src/cli/: main.cpp
src/core/: audio_timing.cpp  config.cpp  execution_plan.cpp  metadata.cpp  pixel_types.cpp  timing.cpp
src/io/: mcraw_reader.cpp
src/output/: backend_selection.cpp  cpu_prores_encoder.cpp  ffmpeg_raii.cpp  ffmpeg_vulkan_context.cpp  ffmpeg_writer.cpp  sidecar.cpp  vulkan_prores_encoder.cpp  vulkan_prores_encoder_stub.cpp
src/processing/: calibration.cpp  color.cpp  demosaic.cpp  log_curve.cpp  pipeline.cpp  raw_chroma_denoise.cpp  yuv.cpp
src/vulkan/: vulkan_camera_pipeline_resources.cpp  vulkan_raw_pipeline_resources.cpp  vulkan_rgb_to_yuv.cpp  vulkan_rgb_to_yuv_frame.cpp  vulkan_runtime.cpp
src/vulkan/shaders/: calibrate_raw.comp.glsl  camera_to_dwg.comp.glsl  camera_to_dwg_fp16_storage.comp.glsl  davinci_intermediate.comp.glsl  davinci_intermediate_fp16_analytic.comp.glsl  davinci_intermediate_fp16_storage.comp.glsl  rcd_demosaic.comp.glsl  rgb_to_yuv_422.comp.glsl  rgb_to_yuv_422_image.comp.glsl  rgb_to_yuv_422_image_fp16_storage.comp.glsl  sharpen_target_linear.comp.glsl  sharpen_target_linear_fp16_storage.comp.glsl
tests/: test_backend_selection.cpp  test_calibration.cpp  test_color.cpp  test_demosaic.cpp  test_execution_plan.cpp  test_ffmpeg_vulkan_context.cpp  test_log_curve.cpp  test_metadata.cpp  test_raw_chroma_denoise.cpp  test_timing.cpp  test_video_encoder.cpp  test_vulkan_camera_pipeline_resources.cpp  test_vulkan_prores_e2e.cpp  test_vulkan_prores_encoder.cpp  test_vulkan_raw_pipeline_resources.cpp  test_vulkan_rgb_to_yuv.cpp  test_vulkan_runtime.cpp  test_worker_pool.cpp  test_yuv.cpp
tools/: cpu_decoder_benchmark.cpp
